[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[project]
name = "aktools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.15.25",
    "alembic>=1.8.1",
    "fastapi>=0.115.5",
    "jinja2>=3.1.2",
    "pydantic>=1.10.2",
    "python-dotenv>=0.21.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=1.4.41",
    "typer[standard]>=0.6.1",
    "uvicorn>=0.16.0",
]
